--- a/Bethany.html
+++ b/Bethany.html
@@ -10,13 +10,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bethany</title>
+
+    <!-- ############################ -->
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- ################################ -->
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="Bethany.css">
 </head>
 <body>
-    <section class="container">
+  <section style="height: 30px;"></section>
+    <section id="section1" class="container" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#" id="bethanyLogo">Bethany</a>
@@ -86,6 +100,39 @@
     </div>
 
     <!-- #########################   Section:3    ############################# -->
+    <section id="clients" class="clients">
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center" data-aos="zoom-in" data-aos-delay="100">
+            <img src="Image/client-1 (1).png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center" data-aos="zoom-in" data-aos-delay="200">
+            <img src="Image/client-1 (1).png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center" data-aos="zoom-in" data-aos-delay="300">
+            <img src="Image/client-1 (1).png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center" data-aos="zoom-in" data-aos-delay="400">
+            <img src="Image/client-1 (1).png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center" data-aos="zoom-in" data-aos-delay="500">
+            <img src="Image/client-1 (1).png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center" data-aos="zoom-in" data-aos-delay="600">
+            <img src="Image/client-1 (1).png" class="img-fluid" alt="">
+          </div>
+
+        </div>
+
+      </div>
+    </section>
     <!-- #########################   Section:4    ############################# -->
     <div id="section4" class="p5">
         <div class="container ">
@@ -316,7 +363,7 @@
 
 
     <!-- #########################   Section:10    ############################# -->
-    <section id="section10">
+    <section  id="testimonials" class="testimonials section-bg">
       <div class="container pt-5 pb-5">
         <div class="row g-0">
           <div class="col-lg-5 p-2">
@@ -324,9 +371,84 @@
             <p>Magnam dolores commodi suscipit uisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
           </div>
 
-          <div class="col-lg-7 p-2">
+          <!-- ######################### -->
+          <!-- <div class="col-lg-7 p-2"> -->
+            <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
 
-          </div>
+              <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+                <div class="swiper-wrapper">
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                      <img src="Image/testimonials-2.jpg" class="testimonial-img" alt="">
+                      <h3>Saul Goodman</h3>
+                      <h4>Ceo &amp; Founder</h4>
+                    </div>
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                      <img src="Image/testimonials-2.jpg" class="testimonial-img" alt="">
+                      <h3>Sara Wilsson</h3>
+                      <h4>Designer</h4>
+                    </div>
+                  </div> 
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                      <img src="Image/testimonials-2.jpg" class="testimonial-img" alt="">
+                      <h3>Jena Karlis</h3>
+                      <h4>Store Owner</h4>
+                    </div>
+                  </div> 
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                      <img src="Image/testimonials-2.jpg" class="testimonial-img" alt="">
+                      <h3>Matt Brandon</h3>
+                      <h4>Freelancer</h4>
+                    </div>
+                  </div> 
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                      <img src="Image/testimonials-2.jpg" class="testimonial-img" alt="">
+                      <h3>John Larson</h3>
+                      <h4>Entrepreneur</h4>
+                    </div>
+                  </div> 
+  
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+            
+          <!-- </div> -->
         </div>
       </div>
     </section>
@@ -464,8 +586,8 @@
             <!-- ############ -->
             <div id="s12Form" class="pt-4 pb-4">
               <div class="row gy-4 gx-0">
-                <input style="" class="col-12 col-lg-6" type="text" name="text" id="name" placeholder="Your Name">
-                <input style="" class="col-12 col-lg-6" type="email" name="email" id="Email" placeholder="Your Email">
+                <input  class="col-12 col-lg-6" type="text" name="text" id="name" placeholder="Your Name">
+                <input  class="col-12 col-lg-6" type="email" name="email" id="Email" placeholder="Your Email">
                 <input type="text" placeholder="Subject" class="col-12">
                 <textarea class="col-12" name="message" id="message" cols="30" rows="5" placeholder="Message"></textarea>
                 <div class="col-12 text-center p-2">
@@ -480,7 +602,114 @@
     </div>
   </section>
 
+
+    <!-- #########################   Section:13    ############################# -->
+    <div class="container-fluid bg-footer " style="background-color: rgba(211, 209, 209, 0.413);">
+      <footer class="container py-5">
+          <div class="row ">
+              <div class="col-12 col-md-6 col-lg-3 border border-white">
+                  <div class="h3 fw-bolder text-center">Bethany</div>
+                  <small class="d-inline-block py-3 w-100 ">A108 Adam Street New York, NY 535022 United States</small>
+                  <small class="d-inline-block py-3">
+                      <b class=" text-center">Phone:</b> +1 1234567890 <br>
+                      <b class=" text-center">Email:</b> varniraj@gmail.com</small>
+                  
+              </div>
+              <div class="col-12 col-md-6 col-lg-2">
+                  <span class="d-inline-block pb-3 fw-bold">Useful Links</span>
+                  <ul class="list-unstyled ul">
+                      <li class="pb-2  text-capitalize">home</li>
+                      <li class="pb-2  text-capitalize">About us</li>
+                      <li class="pb-2  text-capitalize">Services</li>
+                      <li class="pb-2  text-capitalize">Terms of service</li>
+                      <li class="pb-2  text-capitalize">Privacy policy</li>
+                  </ul>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3">
+                  <span class="d-inline-block pb-3 fw-bold">Our Services</span>
+                  <ul class="list-unstyled ul">
+                      <li class="pb-2">Web Design</li>
+                      <li class="pb-2">Web Development</li>
+                      <li class="pb-2">Product Management</li>
+                      <li class="pb-2">Marketing</li>
+                      <li class="pb-2">Graphic Design</li>
+                  </ul>
+              </div>
+              <div class="col-12 col-md-6 col-lg-4">
+                  <span class="d-inline-block pb-2 fw-bold">Join Our Newsletter</span>
+                  <p class="py-2">Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                  <div class="position-relative">
+                      <form>
+                          <input type="text" name="" id="" class="form-control w-100 px-5 py-2">
+                          <input style="background-color: #009970;" type="submit"  value="subscribe" class="bg-blue h-100 px-3 text-capitalize rounded-5 position-absolute bottom-0 end-0 border-0 subscribe " style="padding: 9px;">
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </footer>
+  </div>
+  
+  <div  style="background-color: #bdbbbb82;" class="m-0 row row-cols-1 row-cols-lg-2 container-fluid fot-bg p-4 w-100" >
+    <div class="d-inline-block col">
+      <span class="d-inline-block w-100">© Copyright <b class=" fw-bolder small">Alstar</b>. All RightsReserved</span>
+      <small class="d-inline-block w-100">Designed by <span class="fot txt-blue">BootstrapMade</span></small>
+    </div>
+
+
+    <div class="d-inline-block col" id="footerIcons">
+      <div class=" w-100  text-end" >
+        <i  class="fa-brands fa-twitter  bg-blue    text-white  text-center"></i>
+        <i  class="fa-brands fa-facebook-f   bg-blue    text-white text-center"></i>
+        <i  class="fa-brands fa-instagram   bg-blue    text-white text-center"></i>
+        <i  class="fa-brands fa-skype bg-blue    text-white text-center"></i>
+        <i  class="fa-brands fa-linkedin-in   bg-blue  text-white text-center"></i>
+    </div>
+
+    </div>
+  </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script>
+       new Swiper('.testimonials-slider', {
+    speed: 600,
+    loop: true,
+    autoplay: {
+      delay: 5000,
+      disableOnInteraction: false
+    },
+    slidesPerView: 'auto',
+    pagination: {
+      el: '.swiper-pagination',
+      type: 'bullets',
+      clickable: true
+    },
+    breakpoints: {
+      320: {
+        slidesPerView: 1,
+        spaceBetween: 20
+      },
+
+      1200: {
+        slidesPerView: 2,
+        spaceBetween: 20
+      }
+    }
+  });
+
+  /**
+   * Animation on scroll
+   */
+  window.addEventListener('load', () => {
+    AOS.init({
+      duration: 1000,
+      easing: 'ease-in-out',
+      once: true,
+      mirror: false
+    })
+  });
+    </script>
 </body>
 </html>
 
